# Dispatcher

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/core/: Level.cpp  Level.h  Process.cpp  Process.h  ResourcePool.cpp  ResourcePool.h  structures.h
src/resources/: FAQ.txt  rating.txt
src/ui/: Game.cpp  Game.h  Scene.h
src/ui/Scenes/: FAQScene.cpp  FAQScene.h  GameScene.cpp  GameScene.h  MainMenuScene.cpp  MainMenuScene.h  Rating.cpp  Rating.h  RatingScene.cpp  RatingScene.h  SettingsScene.cpp  SettingsScene.h
src/utils/: Button.cpp  Button.h  Config.h
